--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,22 +1,22 @@
 name: Continuous Deployment
-
-on:
+ 
+on: 
   push:
     branches:
       - master
-
+ 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
+ 
     steps:
     - name: SSH and deploy app
       uses: appleboy/ssh-action@master
       with:
-        hosy: ${{ secrets.SSH_HOST }}
+        host: ${{ secrets.SSH_HOST }}
         username: ${{ secrets.SSH_USERNAME }}
         key: ${{ secrets.SSH_KEY }}
-        ports: ${{ secrets.SSH_PORT }}
+        port: ${{ secrets.SSH_PORT }}
         script: |
           cd ~/auth-api
           git pull origin master
